--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -20,7 +20,11 @@
   margin-top: 50px;
   /* background:red; */
   height: 100%;
-  width:80%;
+  width:88%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .search_bar{
@@ -30,7 +34,8 @@
   height:80rpx;
   box-sizing: border-box;
   padding:0rpx 0rpx;
-  background:rgba(222,222,222,0.3)
+  background:rgba(222,222,222,0.3);
+  width:90%;
 }
 
 .search_bar_input{
@@ -63,12 +68,13 @@
 /* 列表区域 */
 .list{
   margin-top: 30rpx;
+  width:100%;
 }
 
 .list_item{
   height:150rpx;
   width:100%;
-  border:1rpx solid rgba(222,222,222, 0.7);
+  border:2rpx solid rgba(222,222,222, 0.7);
   padding:20rpx 0rpx;
   box-sizing: border-box;
   display: flex;
@@ -87,7 +93,7 @@
   flex-direction: column;
   justify-content: space-between;
   font-size:28rpx;
-  padding-left: 30rpx;
+  padding: 0 30rpx;
   overflow: hidden;
 }
 
@@ -95,11 +101,27 @@
   display: flex;
   font-size:30rpx;
   align-items: center;
+  justify-content: space-between;
 }
 
 .list_item_content_header view{
   display: flex;
   align-items: center;
+}
+
+.list_item_content_header>view:first-child{
+  flex:4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+
+}
+
+.list_item_content_header:view:last-child{
+  flex:1;
+  overflow: hidden;
 }
 
 .list_item_content_header>view:first-child{
@@ -111,8 +133,12 @@
   color:rgba(0,0,0,0.7);
   font-size: 26rpx;
 }
+.list_item_content_footer{
+  display: flex;
+  justify-content: space-between;
+}
 
-.list_item_content_footer>text{
-  margin-right: 20rpx;
+.list_item_content_footer>view{
+  /* margin-right: 20rpx; */
   font-size:26rpx
 }
